--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "prop-types": "15.6.2",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-redux": "6.0.0",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.4",
-    "redux-promise": "^0.6.0"
+    "redux": "4.0.1",
+    "redux-actions": "2.6.4",
+    "redux-promise": "0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
