--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "2.1.3",
     "redux": "4.0.1",
     "redux-actions": "2.6.4",
-    "redux-promise": "0.6.0"
+    "redux-promise": "0.6.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
