--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
     "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
@@ -11,6 +12,7 @@
     "react-scripts": "2.1.3",
     "redux": "4.0.1",
     "redux-actions": "2.6.4",
+    "redux-form": "^8.1.0",
     "redux-promise": "0.6.0",
     "reselect": "^4.0.0"
   },
