--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "redux": "4.0.1",
-    "redux-actions": "2.6.4",
+    "redux-actions": "^2.6.4",
     "redux-form": "^8.1.0",
     "redux-promise": "0.6.0",
     "reselect": "^4.0.0"
